dynamically_typed_tests/invalid/pairs/freeNonPair.wacc
# call free on a non-pair type 

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  x = 5;
  println x;
  free 9 ; 
  println x
end
